www: fix double borders

--- a/assets/stylesheets/wennerstrom.css
+++ b/assets/stylesheets/wennerstrom.css
@@ -12,19 +12,23 @@ ul.service-list {
 	list-style: none;
 	padding: 0;
 	margin: 0;
+	width: 200px;
+	display: inline-block;
+}
+
+ul.service-list li {
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	padding: 4px 18px;
+}
+
+ul.service-list li:not(:last-child) {
+	border-bottom: none;
 }
 
 ul.service-list li a {
 	background-color: #fff;
-	border: 1px solid rgba(0, 0, 0, 0.1);
-	padding: 6px 20px;
 	font-size: 0.9em;
 	display: inline-block;
-	width: 200px;
-}
-
-ul.service-list li a:not(:last-child) {
-	border-bottom: none;
 }
 
 hr {
